--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <a class="button-89" href="_blank">Contact</a>
       </ul>
     </header>
+    <img class="blob-2" src="./img/1x/SVG/blob2.svg" alt="" />
     <main>
       <div class="hero-section">
         <img src="./img/1x/Hero.png" alt="" />
@@ -30,7 +31,10 @@
       <div class="skills-section">
         <img src="./img/1x/SVG/Middle.svg" alt="" />
         <div class="skills">
-          <h1>My Skills</h1>
+          <div class="skills-text">
+            <h1>My Skills</h1>
+            <p>Skills are now under construction</p>
+          </div>
           <div class="skills-card">
             <div class="cards">
               <img src="./img/1x/SVG/htm.svg" alt="" />
