--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a class="button-89" href="_blank">Contact</a>
       </ul>
     </header>
-    <img class="blob-2" src="./img/1x/SVG/blob2.svg" alt="" />
+    <img class="blob-2 animation" src="./img/1x/SVG/blob2.svg" alt="" />
     <main>
       <div class="hero-section">
         <img src="./img/1x/Hero.png" alt="" />
@@ -50,6 +50,25 @@
             </div>
           </div>
           <img class="progress" src="./img/1x/SVG/Progress.svg" alt="" />
+        </div>
+      </div>
+      <div class="goals-section">
+        <img class="blob-1" src="./img/1x/SVG/Blob1.svg" alt="" />
+        <img class="keyboard animation" src="./img/keyboard.png" alt="" />
+        <div class="goals">
+          <h1>Goals! <span>Goals!</span></h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ipsa
+            quas voluptate dicta quisquam possimus delectus hic deserunt
+            provident optio mollitia sed dolore repellendus aspernatur sequi
+            amet atque accusamus ea nostrum a error, perferendis tenetur
+            officia. Laborum omnis voluptate architecto sed impedit ratione,
+            cupiditate explicabo, sunt quaerat velit laboriosam unde eos itaque
+            laudantium fugiat, cum adipisci dignissimos! Dolor excepturi numquam
+            vero? Sapiente, aspernatur incidunt voluptate, corrupti nam aperiam
+            maiores blanditiis provident iusto, deleniti assumenda deserunt.
+            Ipsam odit reprehenderit eaque distinctio?
+          </p>
         </div>
       </div>
     </main>
