--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <!--Header Section Starts Here-->
+
     <header>
       <img class="logo" src="./img/1x/Asset 6.png" alt="" />
       <ul>
@@ -23,11 +25,17 @@
         <a class="button-89" href="_blank">Contact</a>
       </ul>
     </header>
+    <!--Blob Animation-->
+
     <img class="blob-2 animation" src="./img/1x/SVG/blob2.svg" alt="" />
     <main>
+      <!--Hero Section-->
+
       <div class="hero-section">
         <img src="./img/1x/Hero.png" alt="" />
       </div>
+      <!--Skills Section-->
+
       <div class="skills-section">
         <img src="./img/1x/SVG/Middle.svg" alt="" />
         <div class="skills">
@@ -52,6 +60,8 @@
           <img class="progress" src="./img/1x/SVG/Progress.svg" alt="" />
         </div>
       </div>
+      <!--Goals Sections-->
+
       <div class="goals-section">
         <img class="blob-1" src="./img/1x/SVG/Blob1.svg" alt="" />
         <img class="keyboard animation" src="./img/keyboard.png" alt="" />
